--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,16 @@
 .read-the-docs {
   color: #888;
 }
+
+@keyframes slide {
+  0% {
+    left: -30%;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+.animate-slide {
+  animation: slide 3s linear infinite;
+}
